# ros_edge_compression_bridge

./: .gitignore  .gitmodules  LICENSE  README.md  build_all.sh  build_ground_station.sh  build_onboard.sh  compress-all.sh  launch_compress-ros.sh  launch_ground_station.sh  launch_onboard.sh  ros1_compress.py  ros2_decompress.py
bridge_ws/src/: custom_compression_msgs_ros1  custom_compression_msgs_ros2
custom_msgs_ros1_ws/src/custom_compression_msgs/: CMakeLists.txt  package.xml
custom_msgs_ros1_ws/src/custom_compression_msgs/msg/: CompressedJpegXL.msg
custom_msgs_ros2_ws/src/custom_compression_msgs/: CMakeLists.txt  package.xml
custom_msgs_ros2_ws/src/custom_compression_msgs/msg/: CompressedJpegXL.msg
jxl_compress_ros1_ws/src/jxl_compression_tools/: CMakeLists.txt  package.xml
jxl_compress_ros1_ws/src/jxl_compression_tools/launch/: bridge_compress_only.launch  com-decom.launch  compress.launch
jxl_compress_ros1_ws/src/jxl_compression_tools/scripts/: jxl_compressor_node.py  jxl_decompressor_node.py  minimal_subscriber.py
jxl_compress_ros1_ws/src/jxl_compression_tools/scripts/backup/: jxl_compressor_node.py
jxl_compress_ros1_ws/src/jxl_compression_tools/scripts/debug-version/: compressor-verbose.py
jxl_compress_ros1_ws/src/jxl_compression_tools/scripts/debug-version/Ok/: jxl_compressor_node.py  jxl_decompressor_node.py
jxl_decompress_ros2_ws/src/jxl_compression_tools_ros2/: package.xml  setup.cfg  setup.py
jxl_decompress_ros2_ws/src/jxl_compression_tools_ros2/jxl_compression_tools_ros2/: jxl_transcoder_node.py
